tests/cases/compiler/callOnClass.ts
class C { }
var c = C();
//~^ ERROR: Value of type 'typeof C' is not callable.